--- a/COVIDNow/app/src/main/res/layout/fragment_covid_chart.xml
+++ b/COVIDNow/app/src/main/res/layout/fragment_covid_chart.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="covidInfo"
+            type="site.yoonsang.covidnow.model.CovidInfo" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,6 +45,7 @@
                     android:fontFamily="@font/eland"
                     android:textColor="@color/black"
                     android:textSize="12sp"
+                    android:text="@{covidInfo.updateTime}"
                     app:layout_constraintBottom_toTopOf="@id/country_table_layout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/country_title_tv"
