--- a/COVIDNow/app/src/main/res/menu/main_bottom_nav_menu.xml
+++ b/COVIDNow/app/src/main/res/menu/main_bottom_nav_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/main_chart"
+        android:id="@+id/covidChartFragment"
         android:icon="@drawable/ic_chart"
         android:title="현황" />
 
     <item
-        android:id="@+id/main_location"
+        android:id="@+id/covidLocationFragment"
         android:icon="@drawable/ic_location"
         android:title="위치" />
 </menu>
