--- a/COVIDNow/app/src/main/res/layout/fragment_covid_chart.xml
+++ b/COVIDNow/app/src/main/res/layout/fragment_covid_chart.xml
@@ -36,7 +36,7 @@
                     android:fontFamily="@font/eland"
                     android:text="국내 현황판"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginBottom="8dp"
                     android:fontFamily="@font/eland"
                     android:text="@{covidInfo.updateTime}"
                     android:textColor="@color/black"
@@ -84,14 +84,18 @@
                                 android:id="@+id/total_covid_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
                                 android:fontFamily="@font/eland"
                                 android:text="국내 확진자"
-                                android:textColor="@color/white" />
+                                android:textColor="@color/white"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/total_covid_count_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="2dp"
                                 android:fontFamily="@font/eland"
                                 android:text="@{covidInfo.totalCase + `명`}"
                                 android:textColor="@color/white"
@@ -103,6 +107,7 @@
                                 android:fontFamily="@font/eland"
                                 android:text="@{`(+` + covidInfo.totalCaseBefore + `명)`}"
                                 android:textColor="@color/white"
+                                android:textSize="12sp"
                                 tools:text="(+363)" />
 
                         </LinearLayout>
@@ -124,14 +129,18 @@
                                 android:id="@+id/total_heal_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
                                 android:fontFamily="@font/eland"
                                 android:text="국내 완치자"
-                                android:textColor="@color/white" />
+                                android:textColor="@color/white"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/total_heal_count_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="2dp"
                                 android:fontFamily="@font/eland"
                                 android:text="@{covidInfo.totalRecovered + `명`}"
                                 android:textColor="@color/white"
@@ -143,6 +152,7 @@
                                 android:fontFamily="@font/eland"
                                 android:text="@{`(+` + covidInfo.todayRecovered + `명)`}"
                                 android:textColor="@color/white"
+                                android:textSize="12sp"
                                 tools:text="(+123)" />
 
                         </LinearLayout>
@@ -167,14 +177,18 @@
                                 android:id="@+id/total_death_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
                                 android:fontFamily="@font/eland"
                                 android:text="국내 사망자"
-                                android:textColor="@color/white" />
+                                android:textColor="@color/white"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/total_death_count_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="2dp"
                                 android:fontFamily="@font/eland"
                                 android:text="@{covidInfo.totalDeath + `명`}"
                                 android:textColor="@color/white"
@@ -186,6 +200,7 @@
                                 android:fontFamily="@font/eland"
                                 android:text="@{`(+` + covidInfo.todayDeath + `명)`}"
                                 android:textColor="@color/white"
+                                android:textSize="12sp"
                                 tools:text="(+123)" />
                         </LinearLayout>
 
@@ -206,14 +221,18 @@
                                 android:id="@+id/total_check_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
                                 android:fontFamily="@font/eland"
                                 android:text="국내 검사자"
-                                android:textColor="@color/white" />
+                                android:textColor="@color/white"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/total_check_count_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginBottom="2dp"
                                 android:fontFamily="@font/eland"
                                 android:text="@{covidInfo.totalChecking + `명`}"
                                 android:textColor="@color/white"
@@ -223,8 +242,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/eland"
-                                android:text="@{`(검사중 : ` + covidInfo.checkingCounter + `명)`}"
+                                android:text="@{`(` + covidInfo.checkingCounter + `명 검사중)`}"
                                 android:textColor="@color/white"
+                                android:textSize="12sp"
                                 tools:text="(+123)" />
                         </LinearLayout>
                     </TableRow>
@@ -236,19 +256,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:fontFamily="@font/eland"
                     android:text="지역별 현황"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/country_table_layout" />
 
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/region_pie_chart"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
                     android:layout_margin="8dp"
                     app:layout_constraintBottom_toTopOf="@id/region_table_layout"
                     app:layout_constraintEnd_toStartOf="@id/region_rank_table_layout"
@@ -273,13 +293,26 @@
                             android:text="1"
                             android:textColor="@color/black" />
 
-                        <TextView
+                        <LinearLayout
                             android:layout_weight="1"
-                            android:fontFamily="@font/eland"
                             android:gravity="center"
-                            android:text="@{covidInfo.city1n}"
-                            android:textColor="@color/black"
-                            tools:text="서울" />
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="12dp"
+                                android:layout_height="12dp"
+                                android:layout_marginEnd="4dp"
+                                android:src="@drawable/ic_circle"
+                                app:tint="@color/city1" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/eland"
+                                android:text="@{covidInfo.city1n}"
+                                android:textColor="@color/black"
+                                tools:text="서울" />
+                        </LinearLayout>
 
                         <TextView
                             android:layout_weight="1"
@@ -299,13 +332,26 @@
                             android:text="2"
                             android:textColor="@color/black" />
 
-                        <TextView
+                        <LinearLayout
                             android:layout_weight="1"
-                            android:fontFamily="@font/eland"
                             android:gravity="center"
-                            android:text="@{covidInfo.city2n}"
-                            android:textColor="@color/black"
-                            tools:text="서울" />
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="12dp"
+                                android:layout_height="12dp"
+                                android:layout_marginEnd="4dp"
+                                android:src="@drawable/ic_circle"
+                                app:tint="@color/city2" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/eland"
+                                android:text="@{covidInfo.city2n}"
+                                android:textColor="@color/black"
+                                tools:text="서울" />
+                        </LinearLayout>
 
                         <TextView
                             android:layout_weight="1"
@@ -325,13 +371,26 @@
                             android:text="3"
                             android:textColor="@color/black" />
 
-                        <TextView
+                        <LinearLayout
                             android:layout_weight="1"
-                            android:fontFamily="@font/eland"
                             android:gravity="center"
-                            android:text="@{covidInfo.city3n}"
-                            android:textColor="@color/black"
-                            tools:text="서울" />
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="12dp"
+                                android:layout_height="12dp"
+                                android:layout_marginEnd="4dp"
+                                android:src="@drawable/ic_circle"
+                                app:tint="@color/city3" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/eland"
+                                android:text="@{covidInfo.city3n}"
+                                android:textColor="@color/black"
+                                tools:text="서울" />
+                        </LinearLayout>
 
                         <TextView
                             android:layout_weight="1"
@@ -351,13 +410,26 @@
                             android:text="4"
                             android:textColor="@color/black" />
 
-                        <TextView
+                        <LinearLayout
                             android:layout_weight="1"
-                            android:fontFamily="@font/eland"
                             android:gravity="center"
-                            android:text="@{covidInfo.city4n}"
-                            android:textColor="@color/black"
-                            tools:text="서울" />
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="12dp"
+                                android:layout_height="12dp"
+                                android:layout_marginEnd="4dp"
+                                android:src="@drawable/ic_circle"
+                                app:tint="@color/city4" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/eland"
+                                android:text="@{covidInfo.city4n}"
+                                android:textColor="@color/black"
+                                tools:text="서울" />
+                        </LinearLayout>
 
                         <TextView
                             android:layout_weight="1"
@@ -377,13 +449,26 @@
                             android:text="5"
                             android:textColor="@color/black" />
 
-                        <TextView
+                        <LinearLayout
                             android:layout_weight="1"
-                            android:fontFamily="@font/eland"
                             android:gravity="center"
-                            android:text="@{covidInfo.city5n}"
-                            android:textColor="@color/black"
-                            tools:text="서울" />
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="12dp"
+                                android:layout_height="12dp"
+                                android:layout_marginEnd="4dp"
+                                android:src="@drawable/ic_circle"
+                                app:tint="@color/city5" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/eland"
+                                android:text="@{covidInfo.city5n}"
+                                android:textColor="@color/black"
+                                tools:text="서울" />
+                        </LinearLayout>
 
                         <TextView
                             android:layout_weight="1"
@@ -400,7 +485,7 @@
                     android:id="@+id/region_table_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@id/region_pie_chart">
 
                     <TableRow
@@ -449,7 +534,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/eland"
                             android:gravity="center"
-                            android:text="국내"
+                            android:text="합계"
                             android:textColor="@color/black"
                             android:textSize="12sp" />
 
