--- a/COVIDNow/app/src/main/res/values/colors.xml
+++ b/COVIDNow/app/src/main/res/values/colors.xml
@@ -12,4 +12,9 @@
     <color name="heal">#00AC69</color>
     <color name="death">#E81500</color>
     <color name="check">#00CFD5</color>
+    <color name="city1">#5F76E8</color>
+    <color name="city2">#FF4F70</color>
+    <color name="city3">#01CAF1</color>
+    <color name="city4">#28A745</color>
+    <color name="city5">#969696</color>
 </resources>
