--- a/COVIDNow/app/src/main/res/values/colors.xml
+++ b/COVIDNow/app/src/main/res/values/colors.xml
@@ -11,10 +11,14 @@
     <color name="covid">#FA8B0C</color>
     <color name="heal">#00AC69</color>
     <color name="death">#E81500</color>
-    <color name="check">#00CFD5</color>
+    <color name="check">#5673EA</color>
     <color name="city1">#5F76E8</color>
     <color name="city2">#FF4F70</color>
     <color name="city3">#01CAF1</color>
     <color name="city4">#28A745</color>
     <color name="city5">#969696</color>
+    <color name="increase_background">#F4E3E7</color>
+    <color name="increase">#ED6582</color>
+    <color name="table_gray">#F5F5F5</color>
+    <color name="dark_gray">#565656</color>
 </resources>
