--- a/COVIDNow/app/src/main/res/layout/item_clinic.xml
+++ b/COVIDNow/app/src/main/res/layout/item_clinic.xml
@@ -8,6 +8,9 @@
         <variable
             name="document"
             type="site.yoonsang.covidnow.model.Document" />
+        <variable
+            name="phone"
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,7 +26,6 @@
             android:fontFamily="@font/eland"
             android:text="@{document.placeName}"
             android:textColor="@color/black"
-            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,8 +36,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/eland"
-            android:text="@{document.distance}"
+            android:text="@{document.distance + `m`}"
             android:textColor="@color/black"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@id/clinic_phone"
             app:layout_constraintEnd_toStartOf="@id/clinic_split"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +52,7 @@
             android:layout_marginHorizontal="8dp"
             android:layout_marginVertical="4dp"
             android:text="|"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/clinic_phone"
             app:layout_constraintEnd_toStartOf="@id/clinic_address"
@@ -60,8 +64,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/eland"
-            android:text="@{document.roadAddressName}"
+            android:text="@{document.addressName}"
             android:textColor="@color/black"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@id/clinic_phone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/clinic_split"
@@ -73,8 +78,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/eland"
-            android:text="@{document.phone}"
+            android:text="@{phone}"
             android:textColor="@color/black"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/clinic_address"
