--- a/COVIDNow/app/src/main/res/layout/fragment_covid_location.xml
+++ b/COVIDNow/app/src/main/res/layout/fragment_covid_location.xml
@@ -22,18 +22,19 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/location_recycler_view"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/location_my_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/ic_my_location"
             app:layout_constraintBottom_toBottomOf="@id/location_info"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/location_info" />
+            app:layout_constraintTop_toTopOf="@id/location_info"
+            app:tint="@color/black" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/location_recycler_view"
